--- a/stylesheet.css
+++ b/stylesheet.css
@@ -236,6 +236,15 @@ section#user_box div {
 	padding: 10px 20px;
 }
 
+.reglink {
+	text-align: center;
+	margin: 10px 0 0 0;
+	padding: 0 0 25px 0;
+}
+.reglink a {
+	color: #009EFF;
+}
+
 /* Brukeradministrasjon */
 section#administer_users {
 	width: 60%;
